--- a/css/index.css
+++ b/css/index.css
@@ -159,6 +159,7 @@ section {
   padding-top: 150px;
   pointer-events: none;
 }
+
 .content_wrap_inner {
   position: relative;
   margin: 0 auto;
@@ -167,20 +168,24 @@ section {
   overflow: hidden;
   pointer-events: auto;
 }
+
 .content_wrap_inner .row_one {
   font-size: 0;
   position: relative;
   margin-bottom: 43px;
 }
+
 .content_wrap_inner .row_one_left {
   float: left;
   width: 590px;
   overflow: hidden;
 }
+
 .content_wrap_inner .mod_header {
   position: relative;
   margin-bottom: 21px;
 }
+
 .content_wrap_inner .mod_header_title {
   color: hsla(0, 0%, 100%, 0.9);
   font-weight: 400;
@@ -189,24 +194,30 @@ section {
   justify-content: space-between;
   align-items: center;
 }
+
 .content_wrap_inner .mod_header_title .headerList {
   display: flex;
   align-items: flex-end;
 }
+
 .content_wrap_inner .mod_header_title .headerList li {
   margin-right: 10px;
 }
+
 .content_wrap_inner .mod_header_title .headerList li:hover {
   color: #16e07a;
 }
+
 .content_wrap_inner .mod_header_title .headerList li:hover a {
   color: #16e07a;
 }
+
 .content_wrap_inner .mod_header_title .headerList a {
   font-size: 14px;
   color: hsla(0, 0%, 100%, 0.9);
   transition: color 0.1s ease-in-out;
 }
+
 .content_wrap_inner .mod_header_title .headerList i {
   color: hsla(0, 0%, 100%, 0.14);
   display: inline-block;
@@ -214,48 +225,58 @@ section {
   font-size: 12px;
   vertical-align: top;
 }
+
 .content_wrap_inner .mod_header_title .title {
   font-size: 26px;
   line-height: 26px;
   cursor: pointer;
 }
+
 .content_wrap_inner .mod_header_title .control_btn {
   display: inline-block;
   height: 20px;
 }
+
 .content_wrap_inner .mod_header_title .prev_btn {
   margin-right: 10px;
 }
+
 .content_wrap_inner .mod_header_title .prev_btn,
 .content_wrap_inner .mod_header_title .next_btn {
   display: inline-block;
   color: hsla(0, 0%, 100%, 0.2);
 }
+
 .content_wrap_inner .mod_header_title svg {
   fill: currentColor;
 }
+
 .content_wrap_inner .row_one_right {
   float: right;
   width: 590px;
   overflow: hidden;
 }
+
 .mod_ul {
   transition: all 0.5s;
   font-size: 0;
   white-space: nowrap;
 }
+
 .mod_ul li {
   vertical-align: top;
   margin-right: 16px;
   display: inline-block;
   position: relative;
 }
+
 .mod_ul .mod-link {
   width: 186px;
   height: 104px;
   display: block;
   position: relative;
 }
+
 .mod_ul .mod-link img {
   width: 100%;
   height: 100%;
@@ -263,6 +284,7 @@ section {
   opacity: 0;
   transition: all 0.3s;
 }
+
 .mod_ul .mod-link .icon_br {
   position: absolute;
   bottom: 0;
@@ -273,6 +295,7 @@ section {
   padding: 0 8px;
   text-align: right;
 }
+
 .mod_ul .mod-link .icon_br span {
   display: block;
   padding-top: 12px;
@@ -281,10 +304,12 @@ section {
   font-size: 13px;
   text-align: right;
 }
+
 .mod_ul .title_wrap {
   position: relative;
   padding-top: 5px;
 }
+
 .mod_ul .main {
   line-height: 26px;
   height: 26px;
@@ -293,6 +318,7 @@ section {
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+
 .mod_ul .main a {
   color: hsla(0, 0%, 100%, 0.9);
   display: block;
@@ -301,9 +327,11 @@ section {
   transition: color 0.1s ease-in-out;
   cursor: pointer;
 }
+
 .mod_ul .main a:hover {
   color: #16e07a;
 }
+
 .mod_ul .sub {
   height: 24px;
   line-height: 24px;
@@ -313,41 +341,50 @@ section {
   white-space: nowrap;
   color: hsla(0, 0%, 100%, 0.5);
 }
+
 .mod_list_qy {
   width: 100%;
   opacity: 1;
 }
+
 .mod_list_qy .mod-link {
   width: 186px;
   height: 248px;
 }
+
 .mod-link-wrap {
   background-color: rgba(255, 255, 255, 0.1);
 }
+
 .row {
   opacity: 0;
   transition: all 0.5s;
   margin-bottom: 43px;
 }
+
 .ec__list {
   overflow: hidden;
 }
+
 .ec__ul {
   transition: all 0.5s;
   font-size: 0;
   white-space: nowrap;
 }
+
 .ec__ul li {
   vertical-align: top;
   margin-right: 16px;
   display: inline-block;
   position: relative;
 }
+
 .ec__li {
   vertical-align: top;
   display: inline-block;
   margin-right: 16px;
 }
+
 .ec__content {
   cursor: pointer;
   position: relative;
@@ -363,6 +400,7 @@ section {
   background-color: hsla(0, 0%, 100%, 0.1);
   padding: 0 8px;
 }
+
 .ec__title {
   color: hsla(0, 0%, 100%, 0.47);
   display: inline-block;
@@ -375,6 +413,7 @@ section {
   width: 170px;
   vertical-align: top;
 }
+
 .ec__team {
   margin-top: 4px;
   line-height: 21px;
@@ -383,24 +422,29 @@ section {
   align-items: center;
   height: 24px;
 }
+
 .ec__team .scroll {
   position: relative;
   top: 10px;
   width: 36%;
 }
+
 .ec__team .scroll .timeline {
   line-height: 15px;
   color: hsla(0, 0%, 100%, 0.47);
 }
+
 .ec__team .ec__team__item {
   width: 32%;
 }
+
 .ec__team .ec__team__item img {
   height: 29px;
   width: 26px;
   cursor: pointer;
   object-fit: contain;
 }
+
 .ec__team__name {
   display: flex;
   -ms-flex-direction: row;
@@ -412,6 +456,7 @@ section {
   white-space: normal;
   overflow: visible;
 }
+
 .ec__team__name .ec__ellipsiss {
   text-align: center;
   word-break: break-all;
@@ -420,15 +465,18 @@ section {
   -webkit-box-orient: vertical;
   width: 32%;
 }
+
 .ec_combine {
   line-height: 21px;
   width: 91%;
   position: absolute;
   bottom: 6px;
 }
+
 .ec__team__item__name {
   width: 100%;
 }
+
 .yuyue_wrap {
   display: -ms-flexbox;
   display: flex;
@@ -436,6 +484,7 @@ section {
   justify-content: center;
   align-items: center;
 }
+
 .yuyue_wrap .mp_yuyue_link {
   display: inline-block;
   box-sizing: border-box;
@@ -444,16 +493,23 @@ section {
   line-height: 23px;
   text-align: center;
   border-radius: 3px;
-  background-color: #16e07a;
   background-image: linear-gradient(254deg, #08cc7e, #00cc4c 97%);
   background-repeat: repeat-x;
   color: #fff;
   font-size: 12px;
   cursor: pointer;
+
 }
+
+.yuyue_wrap .mp_yuyue_link:hover {
+  background-image: linear-gradient(254deg, #39d697, #33d66f 97%);
+}
+
+
 .game_row {
   margin-bottom: 43px;
 }
+
 .game_row a {
   height: 100px;
   width: 100%;
@@ -463,6 +519,7 @@ section {
   border-radius: 4px;
   background: url(../images/lanjiazai/gamerow.webp) 50% 50% no-repeat;
 }
+
 .game_row a span {
   width: 27px;
   height: 16px;
@@ -478,15 +535,18 @@ section {
   top: 4px;
   left: 4px;
 }
+
 .ad_wrap {
   width: 100%;
   font-size: 0;
   margin-bottom: 48px;
   overflow: hidden;
 }
+
 .theatre_container {
   position: relative;
 }
+
 @media screen and (min-width: 1336px) {
   .theatre_label {
     color: #fff;
@@ -496,6 +556,7 @@ section {
     line-height: 22px;
     margin-bottom: 15px;
   }
+
   .theatre_arrow {
     width: 32px;
     height: 40px;
@@ -505,19 +566,23 @@ section {
     top: 50%;
     margin-top: -20px;
   }
+
   .theatre_arrow_left {
     left: 0;
     background: url(../images/lanjiazai/arrow-left.png);
   }
+
   .theatre_arrow_right {
     right: 0;
     background: url(../images/lanjiazai/arrow-right.png);
   }
+
   .theatre_carousel_wrapper {
     height: 100px;
     overflow: hidden;
     margin: 0 auto;
   }
+
   .theatre_carousel_box {
     width: 5000px;
     height: 130px;
@@ -525,6 +590,7 @@ section {
     display: inline-block;
     line-height: 0;
   }
+
   .theatre-item {
     width: 220px;
     overflow: hidden;
@@ -535,38 +601,46 @@ section {
     cursor: pointer;
     background-color: #191a20;
   }
+
   .theatre_hover {
     width: 1164px;
     z-index: 100;
   }
+
   .theatre_expand {
     width: 1164px;
     border-radius: 4px;
   }
+
   .theatre_left {
     float: left;
     width: 220px;
   }
+
   .theatre_left img {
     width: 100%;
     border-radius: 4px;
   }
+
   .theatre_right {
     float: left;
     margin-left: 16px;
     width: 928px;
     height: 100px;
   }
+
   .theatre_right img {
     border-radius: 4px;
     width: 100%;
     height: 100%;
   }
+
   .theatre_no_width {
     width: 0;
     margin: 0;
   }
 }
+
 @media screen and (max-width: 1335px) {
   .theatre_label {
     color: #fff;
@@ -576,6 +650,7 @@ section {
     line-height: 22px;
     margin-bottom: 15px;
   }
+
   .theatre_arrow {
     width: 32px;
     height: 40px;
@@ -585,19 +660,23 @@ section {
     top: 50%;
     margin-top: -20px;
   }
+
   .theatre_arrow_left {
     left: 0;
     background: url(../images/lanjiazai/arrow-left.png);
   }
+
   .theatre_arrow_right {
     right: 0;
     background: url(../images/lanjiazai/arrow-right.png);
   }
+
   .theatre_carousel_wrapper {
     height: 86px;
     overflow: hidden;
     margin: 0 auto;
   }
+
   .theatre_carousel_box {
     width: 5000px;
     height: 130px;
@@ -605,6 +684,7 @@ section {
     display: inline-block;
     line-height: 0;
   }
+
   .theatre-item {
     width: 186px;
     overflow: hidden;
@@ -614,37 +694,45 @@ section {
     background-color: #191a20;
     cursor: pointer;
   }
+
   .theatre_hover {
     width: 994px;
     z-index: 100;
   }
+
   .theatre_expand {
     width: 994px;
   }
+
   .theatre_left {
     float: left;
     width: 186px;
   }
+
   .theatre_left img {
     width: 100%;
     border-radius: 4px;
   }
+
   .theatre_right {
     float: left;
     margin-left: 16px;
     width: 792px;
     height: 85px;
   }
+
   .theatre_right img {
     border-radius: 4px;
     width: 100%;
     height: 100%;
   }
+
   .theatre-no-width {
     width: 0;
     margin: 0;
   }
 }
+
 .mod_more {
   color: #00cc4c;
   width: 300px;
@@ -657,38 +745,41 @@ section {
   font-size: 15px;
   background-color: hsla(0, 0%, 100%, 0.04);
 }
+
 .mod_more:hover {
   background-color: hsla(0, 0%, 100%, 0.06);
 }
+
 .mod_more .mod_more_svg {
   position: relative;
   top: 3px;
-  margin-right: 3px;
+  .scroll: hover margin-right: 3px;
 }
+
 aside {
   position: fixed;
   right: 30px;
   bottom: 30px;
   z-index: 1000;
 }
+
 .scroll {
   height: 36px;
   width: 36px;
-  background-color: hsla(0, 0%, 100%, 0.1);
   border-radius: 50%;
   text-align: center;
 }
-.scroll:hover {
-  background-color: #fff;
-}
+
 .scroll:hover svg {
   fill: #00cc4c;
 }
+
 .scroll svg {
   width: 16px;
   height: 36px;
   fill: #e6e6e6;
 }
+
 footer {
   padding-top: 24px;
   padding-bottom: 24px;
@@ -697,12 +788,14 @@ footer {
   position: relative;
   bottom: -500px;
 }
+
 .footer_content {
   position: relative;
   font-size: 0;
   margin: 0 auto;
   line-height: 16px;
 }
+
 .footer_content_top {
   display: flex;
   border-bottom: 1px solid hsla(0, 0%, 100%, 0.05);
@@ -710,12 +803,14 @@ footer {
   margin-bottom: 25px;
   justify-content: space-between;
 }
+
 .cate_title {
   font-size: 18px;
   color: hsla(0, 0%, 100%, 0.9);
   line-height: 20px;
   margin-bottom: 20px;
 }
+
 .list_item {
   display: inline-block;
   margin-right: 20px;
@@ -726,18 +821,22 @@ footer {
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+
 .list_item .link {
   display: block;
   margin-bottom: 16px;
   color: hsla(0, 0%, 100%, 0.5);
 }
+
 .list_item .link:hover {
   color: #00cc4c;
 }
+
 @keyframes delayloding {
   0% {
     transform: translateY(20px);
   }
+
   100% {
     transform: translateY(0px);
   }
@@ -754,6 +853,7 @@ footer {
   width: 300px;
   border-radius: 4px;
 }
+
 .card_hover {
   display: block;
   visibility: visible;
@@ -762,11 +862,13 @@ footer {
   will-change: opacity;
   animation: card-hover 0.2s ease backwards;
 }
+
 .img_wrap {
   display: block;
   position: relative;
   height: 205px;
 }
+
 .img_wrap .img {
   position: relative;
   width: 100%;
@@ -776,16 +878,19 @@ footer {
   overflow: hidden;
   cursor: pointer;
 }
+
 .img_wrap .img img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
+
 .content {
   padding: 10px 10px 16px 15px;
   font-size: 14px;
   color: hsla(0, 0%, 100%, 0.7);
 }
+
 .content .title {
   display: block;
   font-size: 20px;
@@ -795,10 +900,12 @@ footer {
   white-space: nowrap;
   transition: color 0.1s ease-in-out;
 }
+
 .content .tab_wrap {
   margin-top: 6px;
   margin-bottom: 8px;
 }
+
 .content .tab_wrap .tab {
   background-color: hsla(0, 0%, 100%, 0.1);
   color: hsla(0, 0%, 100%, 0.5);
@@ -807,6 +914,7 @@ footer {
   padding: 2px 5px;
   margin-right: 5px;
 }
+
 .content .people {
   line-height: 14px;
   height: 14px;
@@ -814,11 +922,13 @@ footer {
   overflow: hidden;
   color: hsla(0, 0%, 100%, 0.7);
 }
+
 .content .desc {
   min-height: 66px;
   margin-top: 6px;
   color: hsla(0, 0%, 100%, 0.7);
 }
+
 .content .play_btn {
   background-image: linear-gradient(254deg, #08cc7e, #00cc4c 97%);
   border-radius: 4px;
@@ -831,20 +941,25 @@ footer {
   text-align: center;
   margin-top: 11px;
 }
+
 .content .play_btn:hover {
   background-image: linear-gradient(254deg, #39d697, #33d66f 97%);
 }
+
 .content .play_btn svg {
   fill: #fff;
 }
+
 @keyframes card-hover {
   0% {
     transform: translateZ(20px) scale(0.93);
     opacity: 0;
   }
+
   50% {
     opacity: 1;
   }
+
   to {
     transform: translateZ(20px) scale(1);
     opacity: 1;
@@ -1967,7 +2082,7 @@ i {
     top: 340px;
   }
 
-  footer{
+  footer {
     bottom: -340px;
   }
 
@@ -2037,7 +2152,8 @@ i {
   #app .content_wrap {
     top: 430px;
   }
-  footer{
+
+  footer {
     bottom: -430px;
   }
 
